# wgpu-cube

./: Bell Virtual Trackball.gcx  Cargo.toml  NOTES.md  README.md  TODO.md  rustfmt.toml  wgpu_recipes.md
src/: binding.rs  blinky.rs  bounds.rs  camera.rs  common_shader.wgsl  cube.rs  cube_edge_shader.wgsl  cube_face_shader.wgsl  cube_face_shader_NEW.wgsl  cube_model.rs  filleted_cube.mtl  floor.rs  floor_shader.wgsl  glow.rs  junk.rs  lights.rs  main.rs  post.rs  post_shaders.wgsl  prefloor.rs  prelude.rs  splitter.rs  test_pattern.rs  texture.rs  trackball.rs  traits.rs
xcode/wgpu-cube/wgpu-cube.xcodeproj/: project.pbxproj
xcode/wgpu-cube/wgpu-cube.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/wgpu-cube/wgpu-cube.xcodeproj/xcshareddata/xcschemes/: wgpu-cube.xcscheme
