[package]
name = "wgpu-cube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7"
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ]}
cgmath = "0.18"
env_logger = "0.9"
image = "0.23"
pollster = "0.2"
rand = "0.8"
stringreader = "0.1"
tobj = "3.2"
wgpu = "0.12"
winit = "0.26"
